[project]
name = "athena-kit"
version = "1.1.0"
description = "A modular Python toolkit for Athena projects."
readme = "README.md"
authors = [
    { name = "wangmu", email = "wangmu8889@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["athena", "toolkit", "utilities", "temporal", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/wangmu0115/Athena"
Repository = "https://github.com/wangmu0115/Athena"
Issues = "https://github.com/wangmu0115/Athena/issues"

[project.optional-dependencies]
pandas = [
    "pandas>=2.3.3",
]
http = [
    "httpx>=0.28.1",
]
lark = [
    "httpx>=0.28.1",
]
matplotlib = [
    "matplotlib>=3.10.9",
]
all = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = [
    "src",
    "tests",
    "examples",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle error
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
preview = true

[tool.ruff.lint.isort]
known-first-party = [
    "athena_kit",
]
