[project]
name = "athena-charts-matplotlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wangmu", email = "wangmu8889@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "athena-charts",
]

[project.scripts]
charts-matplotlib = "charts_matplotlib:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
athena-charts = { workspace = true }
