[project]
name = "athena-charts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wangmu0115", email = "wangmu8889@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "athena-core",
]

[project.scripts]
charts = "athena_charts:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
athena-core = { workspace = true }
