[project]
name = "athena-charts"
version = "1.0.0"
description = "声明式图表规范、主题、运行时协议和通用输出"
readme = "README.md"
authors = [
    { name = "wangmu0115", email = "wangmu8889@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "athena-core",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
athena-core = { workspace = true }
