[project]
name = "athena-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wangmu0115", email = "wangmu8889@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[project.scripts]
core = "athena_core:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
