[project]
name = "athena-core"
version = "1.0.0"
description = "Athena Core"
readme = "README.md"
authors = [
    { name = "wangmu", email = "wangmu8889@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[project.scripts]
core = "athena_core:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
