[project]
name = "athena-core"
version = "1.0.1"
description = "Core runtime utilities for Athena projects."
readme = "README.md"
authors = [
    { name = "wangmu", email = "wangmu8889@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]
license = "MIT"
keywords = ["athena", "core", "temporal", "timezone", "pydantic", "utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dataframe = [
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
